# rust-axum-boilerplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  set-up-hook.sh
.githooks/: pre-commit
.github/workflows/: cd.yml  ci.yml
migrations/: 20260606171014_create_initial_tables.up.sql
src/: main.rs
src/adapters/http/: app_error_impl.rs  app_state.rs
src/adapters/http/routes/: user.rs
src/adapters/persistence/: mod.rs  user.rs
src/application/use_cases/: user.rs
src/infra/: config.rs  setup.rs
